@@ -44,3 +44,5 @@ The head of Ivan is left in bone levels.
 Kamikaze dwarves die smiling even if headless.
 "You feel a slight tingling in your hands." when armless.
 Mirage dogs.
+Odd pentagram missing bug.
+A puppy can polymorph into a puppy.
