@@ -390,3 +390,7 @@ Message for bottles breaking inside chests.
 Bear traps made of stronger materials should do more damage.
 If the player has a wand of resurrection, a ghost should steal it and float quickly to raise his corpse.
 Unarmed accustomization.
+Thunder hammer's power should be proportional to relation with Loricatus.
+The smith should repair pet golems.
+Golems should pick up and read scrolls of repair.
+*Blindfold.
